--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="sparkle.js"></script>
+
   <style type="text/css">
     body {
       font-family: "Courier", monospace;
